fix: align main sections

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,4 +1,4 @@
-.main-about {
+#main-about {
     color: inherit;
     background-color: inherit;
     width: 100%;
