--- a/assets/css/curriculo.css
+++ b/assets/css/curriculo.css
@@ -1,4 +1,4 @@
-.main-cv {
+#main-cv {
     color: inherit;
     background-color: inherit;
     width: 100%;
