--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -1,4 +1,4 @@
-.main-projects {
+#main-projects {
     color: inherit;
     background-color: inherit;
     width: 100%;
